<resources>

    <string name="facebook_app_id">1899826096994876</string>
    <string name="fb_login_protocol_scheme">fb1899826096994876</string>
    <string name="navigation_drawer_open">Abrir panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar panel de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Encabezado de Navegación</string>
    <string name="action_settings">Configuración</string>

    <string name="nav_hotel">Hoteles</string>
    <string name="nav_museum">Museos</string>
    <string name="nav_wifi">Puntos Wi-Fi Gratis</string>
    <string name="nav_station">Estaciones de Servicio</string>
    <string name="nav_park">Parques</string>
    <string name="nav_restaurant">Restaurantes</string>
    <string name="nav_hospital">Hospitales</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="category">Categoría</string>
    <string name="map">Mapa</string>
    <string name="others">Otros</string>
    <string name="main">Medellín, Colombia</string>
    <string name="about">Acerca de</string>

</resources>
